--- a/index.html
+++ b/index.html
@@ -1072,9 +1072,100 @@
       const attendanceApp = document.getElementById('attendance-app');
       const saveBtn = document.getElementById('save-attendance-btn');
 
-      // Ensure global attendance state
-      window.subjects = window.subjects || [];
-      window.selectedSubject = window.selectedSubject || null;
+      // Assign default subjects directly to window.subjects
+      window.subjects = [
+          {
+              id: 1,
+              name: "Design Dissertation - 1",
+              target: 75,
+              startDate: new Date('2025-06-10'),
+              examDate: new Date('2025-09-16'),
+              classDays: [1], // Monday
+              timeSlot: "7:30 AM - 10:30 AM",
+              attendance: {}
+          },
+          {
+              id: 2,
+              name: "Arch. Design Studio - 8",
+              target: 75,
+              startDate: new Date('2025-06-10'),
+              examDate: new Date('2025-09-16'),
+              classDays: [2], // Tuesday only (double lecture)
+              timeSlot: "7:30 AM - 2:00 PM",
+              attendance: {}
+          },
+          {
+              id: 3,
+              name: "Allied Studio - 8 (Town Planning)",
+              target: 75,
+              startDate: new Date('2025-06-10'),
+              examDate: new Date('2025-09-16'),
+              classDays: [3, 5], // Wednesday & Friday
+              timeSlot: "7:30 AM - 10:30 AM / 11:00 AM - 12:00 PM",
+              attendance: {}
+          },
+          {
+              id: 4,
+              name: "Professional Practice - 2",
+              target: 75,
+              startDate: new Date('2025-06-10'),
+              examDate: new Date('2025-09-16'),
+              classDays: [4], // Thursday
+              timeSlot: "7:30 AM - 10:30 AM",
+              attendance: {}
+          },
+          {
+              id: 5,
+              name: "Arch. Building Construction - 8",
+              target: 75,
+              startDate: new Date('2025-06-10'),
+              examDate: new Date('2025-09-16'),
+              classDays: [5], // Friday
+              timeSlot: "7:30 AM - 10:30 AM",
+              attendance: {}
+          },
+          {
+              id: 6,
+              name: "Environmental Studies - 4",
+              target: 75,
+              startDate: new Date('2025-06-10'),
+              examDate: new Date('2025-09-16'),
+              classDays: [1], // Monday
+              timeSlot: "11:00 AM - 2:00 PM",
+              attendance: {}
+          },
+          {
+              id: 7,
+              name: "Theory & Design of Structures - 8",
+              target: 75,
+              startDate: new Date('2025-06-10'),
+              examDate: new Date('2025-09-16'),
+              classDays: [3], // Wednesday
+              timeSlot: "11:00 AM - 12:30 PM",
+              attendance: {}
+          },
+          {
+              id: 8,
+              name: "Arch. Building Services - 6",
+              target: 75,
+              startDate: new Date('2025-06-10'),
+              examDate: new Date('2025-09-16'),
+              classDays: [4], // Thursday
+              timeSlot: "12:30 PM - 2:00 PM",
+              attendance: {}
+          },
+          {
+              id: 9,
+              name: "Elective - 8",
+              target: 75,
+              startDate: new Date('2025-06-10'),
+              examDate: new Date('2025-09-16'),
+              classDays: [5], // Friday
+              timeSlot: "11:00 AM - 2:00 PM",
+              attendance: {}
+          }
+      ];
+      window.selectedSubject = null;
 
       // Helper: Save/load attendance to Firestore
       async function saveAttendanceToFirestore(uid, data) {
@@ -1228,103 +1319,6 @@
         setInterval(() => {
             changeSlide(1);
         }, 5000);
-
-        // Pre-configured subjects based on the timetable
-        let subjects = [
-            {
-                id: 1,
-                name: "Design Dissertation - 1",
-                target: 75,
-                startDate: new Date('2025-06-10'),
-                examDate: new Date('2025-09-16'),
-                classDays: [1], // Monday
-                timeSlot: "7:30 AM - 10:30 AM",
-                attendance: {}
-            },
-            {
-                id: 2,
-                name: "Arch. Design Studio - 8",
-                target: 75,
-                startDate: new Date('2025-06-10'),
-                examDate: new Date('2025-09-16'),
-                classDays: [2], // Tuesday only (double lecture)
-                timeSlot: "7:30 AM - 2:00 PM",
-                attendance: {}
-            },
-            {
-                id: 3,
-                name: "Allied Studio - 8 (Town Planning)",
-                target: 75,
-                startDate: new Date('2025-06-10'),
-                examDate: new Date('2025-09-16'),
-                classDays: [3, 5], // Wednesday & Friday
-                timeSlot: "7:30 AM - 10:30 AM / 11:00 AM - 12:00 PM",
-                attendance: {}
-            },
-            {
-                id: 4,
-                name: "Professional Practice - 2",
-                target: 75,
-                startDate: new Date('2025-06-10'),
-                examDate: new Date('2025-09-16'),
-                classDays: [4], // Thursday
-                timeSlot: "7:30 AM - 10:30 AM",
-                attendance: {}
-            },
-            {
-                id: 5,
-                name: "Arch. Building Construction - 8",
-                target: 75,
-                startDate: new Date('2025-06-10'),
-                examDate: new Date('2025-09-16'),
-                classDays: [5], // Friday
-                timeSlot: "7:30 AM - 10:30 AM",
-                attendance: {}
-            },
-            {
-                id: 6,
-                name: "Environmental Studies - 4",
-                target: 75,
-                startDate: new Date('2025-06-10'),
-                examDate: new Date('2025-09-16'),
-                classDays: [1], // Monday
-                timeSlot: "11:00 AM - 2:00 PM",
-                attendance: {}
-            },
-            {
-                id: 7,
-                name: "Theory & Design of Structures - 8",
-                target: 75,
-                startDate: new Date('2025-06-10'),
-                examDate: new Date('2025-09-16'),
-                classDays: [3], // Wednesday
-                timeSlot: "11:00 AM - 12:30 PM",
-                attendance: {}
-            },
-            {
-                id: 8,
-                name: "Arch. Building Services - 6",
-                target: 75,
-                startDate: new Date('2025-06-10'),
-                examDate: new Date('2025-09-16'),
-                classDays: [4], // Thursday
-                timeSlot: "12:30 PM - 2:00 PM",
-                attendance: {}
-            },
-            {
-                id: 9,
-                name: "Elective - 8",
-                target: 75,
-                startDate: new Date('2025-06-10'),
-                examDate: new Date('2025-09-16'),
-                classDays: [5], // Friday
-                timeSlot: "11:00 AM - 2:00 PM",
-                attendance: {}
-            }
-        ];
-
-        let currentDate = new Date();
-        let selectedSubject = null;
 
         // Initialize all subjects with their schedules
         function initializeSubjects() {
@@ -1540,11 +1534,11 @@
         }
 
         function updateCalendar() {
-            const year = currentDate.getFullYear();
-            const month = currentDate.getMonth();
+            const year = new Date().getFullYear();
+            const month = new Date().getMonth();
             
             document.getElementById('currentMonth').textContent = 
-                currentDate.toLocaleString('default', { month: 'long', year: 'numeric' });
+                new Date(year, month, 1).toLocaleString('default', { month: 'long', year: 'numeric' });
             
             const firstDay = new Date(year, month, 1);
             const lastDay = new Date(year, month + 1, 0);
@@ -1628,6 +1622,7 @@
         }
 
         function changeMonth(direction) {
+            const currentDate = new Date();
             currentDate.setMonth(currentDate.getMonth() + direction);
             updateCalendar();
         }
@@ -1638,7 +1633,7 @@
         updateDisplay();
 
         // Set calendar to start of semester
-        currentDate = new Date('2025-06-01');
+        const currentDate = new Date('2025-06-01');
         updateCalendar();
     </script>
 </body>
