--- a/index.html
+++ b/index.html
@@ -1166,6 +1166,7 @@
           }
       ];
       window.selectedSubject = null;
+      initializeSubjects();
 
       // Helper: Save/load attendance to Firestore
       async function saveAttendanceToFirestore(uid, data) {
