--- a/index.html
+++ b/index.html
@@ -1169,6 +1169,7 @@
           }
       ];
       window.selectedSubject = null;
+      window.currentDate = new Date('2025-06-01');
       initializeSubjects();
 
       // Helper: Save/load attendance to Firestore
