Fix: Ensure selectSubject updates window.selectedSubject and auto-saves selection to Firestore

--- a/index.html
+++ b/index.html
@@ -1381,8 +1381,9 @@
         }
 
         function selectSubject(subjectId) {
-            selectedSubject = selectedSubject === subjectId ? null : subjectId;
+            window.selectedSubject = window.selectedSubject === subjectId ? null : subjectId;
             updateDisplay();
+            saveData();
         }
 
         function markTodayAllAttended() {
