Fix: Expose selectSubject as window.selectSubject so subject selection updates global state and persists

--- a/index.html
+++ b/index.html
@@ -1151,6 +1151,8 @@
         initializeCarousel();
         updateDisplay();
       });
+      // Expose selectSubject globally for card onclick handlers
+      window.selectSubject = selectSubject;
     </script>
     <script>
         // Image Carousel
